@@ -43,7 +43,7 @@ exportMethods(
               "Dictionary",
               "DirSource",
               "VectorSource",
-              "CSVSource",
+              "CSVSource", # defunct
               "ReutersSource",
               "GmaneSource",
               "URISource",
@@ -162,7 +162,6 @@ exportClasses("TextDocument",
               "DataframeSource",
               "DirSource",
               "VectorSource",
-              "CSVSource",
               "ReutersSource",
               "GmaneSource",
               "URISource",
