@@ -4,7 +4,6 @@
 \alias{eoi-methods}
 \alias{eoi,DirSource-method}
 \alias{eoi,DataframeSource-method}
-\alias{eoi,CSVSource-method}
 \alias{eoi,URISource-method}
 \alias{eoi,ReutersSource-method}
 \alias{eoi,GmaneSource-method}
@@ -20,8 +19,6 @@
     \item{object = "DirSource"}{returns \code{TRUE} if the last item has
       been reached.}
     \item{object = "URISource"}{returns \code{TRUE} if the last item has
-      been reached.}
-    \item{object = "CSVSource"}{returns \code{TRUE} if the last item has
       been reached.}
     \item{object = "ReutersSource"}{returns \code{TRUE} if the last item has
       been reached.}
